[package]
name = "sparse_set_container"
version = "1.0.1"
edition = "2021"
authors = ["Pavel Grebnev"]
description = "A container based on sparse set. Stable keys, O(1) lookup, cache-friendly iterations, and no hashing."
repository = "https://github.com/gameraccoon/sparse_set"
license = "MIT"
categories = ["data-structures"]

[dependencies]

[dev-dependencies]
bencher = "0.1.5"
