[package]
name = "sparse_set_container"
version = "1.2.2"
edition = "2021"
authors = ["Pavel Grebnev"]
description = "A container based on sparse set. Stable keys, O(1) lookup, cache-friendly iterations, and no hashing."
repository = "https://github.com/gameraccoon/sparse_set"
license = "MIT"
categories = ["data-structures"]
include = ["src/**", "README.md", "LICENSE"]

[dependencies]

[dev-dependencies]
bencher = "0.1.5"

# to compare in benchmarks
thunderdome = "0.6.1"
generational-arena = "0.2.9"
slotmap = "1.0.7"
